--- a/factura-app/src/Factura.css
+++ b/factura-app/src/Factura.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Play", sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,18 +12,20 @@ header {
     background-color: #f1f1f1;
 }
 
+.logo-container {
+    text-align: left; 
+    margin-bottom: 20px;
+}
+
 .logo {
-    height: 120px;
+    max-width: 100px;
+    height: auto;
     margin-right: 100px;
-    margin-left: 20px;
+    margin-left: 20px; 
 }
 
 .company-name {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.company-name {
+    font-family: "Play", sans-serif;
     font-size: 24px;
     font-weight: bold;
 }
@@ -43,18 +45,7 @@ header {
     display: block;
     margin: 10px 0;
 }
-/* Contenedor del logo */
-.logo-container {
-    text-align: lefth;
-    margin-bottom: 20px;
-}
 
-.logo {
-    max-width: 100px;
-    height: auto;
-}
-
-/* Main content */
 .main-content {
     display: flex;
     flex-direction: column;
@@ -62,13 +53,12 @@ header {
     padding: 0px;
 }
 
-/* Navbar */
 .navbar {
     background-color: #2c3e50;
     color: white;
     padding: 10px;
     text-align: center;
-    width: 100%; /* Abarca todo el ancho */
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
